--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -15,6 +15,10 @@
   margin-top:64px;
 }
 
+.ant-menu-submenu.ant-menu-submenu-popup {
+  top:60px !important;
+}
+
 @media(max-width:576px){
   .site-layout .site-layout-content {
     padding:24px 15px;
@@ -22,9 +26,15 @@
   }
   .ant-layout-content.site-layout {
     padding: 0 10px;
+    margin-top:40px;
   }
 
   .ant-layout-header {
     padding: 0 10px;
+    height: 40px;
+    line-height: 40px;
+  }
+  .ant-menu-submenu.ant-menu-submenu-popup {
+    top:40px  !important;
   }
 }
