undoing mobile hamburger menu

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -29,10 +29,11 @@
     margin-top:50px;
   }
 
+  /*
   .ant-layout-header .ant-menu {
     width:100px;
   }
-
+  */
   .ant-layout-header {
     padding: 0 10px;
     height: 50px;
